; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/extr_send.c_send_add_tlv_path.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/extr_send.c_send_add_tlv_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*, i64, i32*, i8*, i64)* @send_add_tlv_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @send_add_tlv_path(%struct.TYPE_4__* %0, i64 %1, i32* %2, i8* %3, i64 %4) #0 {
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %6, align 8
  store i64 %1, i64* %7, align 8
  store i32* %2, i32** %8, align 8
  store i8* %3, i8** %9, align 8
  store i64 %4, i64* %10, align 8
  %12 = load i32*, i32** %8, align 8
  %13 = load i64, i64* %10, align 8
  %14 = call i64 @find_path_len(i32* %12, i64 %13)
  store i64 %14, i64* %11, align 8
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %16 = load i64, i64* %7, align 8
  %17 = load i64, i64* %11, align 8
  %18 = call i32 @send_add_tlv(%struct.TYPE_4__* %15, i64 %16, i32* null, i64 %17)
  %19 = load i64, i64* %11, align 8
  %20 = icmp sgt i64 %19, 0
  br i1 %20, label %21, label %36

21:                                               ; preds = %5
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 1
  %24 = load i32*, i32** %23, align 8
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = load i64, i64* %11, align 8
  %29 = sub nsw i64 %27, %28
  %30 = getelementptr inbounds i32, i32* %24, i64 %29
  %31 = bitcast i32* %30 to i8*
  %32 = load i32*, i32** %8, align 8
  %33 = load i8*, i8** %9, align 8
  %34 = load i64, i64* %10, align 8
  %35 = call i32 @find_path(i8* %31, i32* %32, i8* %33, i64 %34)
  br label %36

36:                                               ; preds = %21, %5
  ret void
}

declare dso_local i64 @find_path_len(i32*, i64) #1

declare dso_local i32 @send_add_tlv(%struct.TYPE_4__*, i64, i32*, i64) #1

declare dso_local i32 @find_path(i8*, i32*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
